tools/swmm-output/src/outputapi.h

#define MAXFILENAME     259   // Max characters in file path
#define MAXELENAME       31   // Max characters in element name
/*------------------- Error Messages --------------------*/
#define ERR410 "Error 410: SMO_init() has not been called"
#define ERR411 "Error 411: SMO_open() has not been called"
#define ERR414 "Error 414: memory allocation failure"
#define ERR421 "Input Error 421: invalid parameter code"
#define ERR422 "Input Error 422: reporting period index out of range"
#define ERR423 "Input Error 423: element index out of range"
#define ERR424 "Input Error 424: no memory allocated for results"
#define ERR434 "File Error 434: unable to open binary output file"
#define ERR435 "File Error 435: invalid file - not created by SWMM"
#define ERR436 "File Error 436: invalid file - contains no results"
#define ERR437 "File Error 437: invalid file - model run issued warnings"
#define ERR440 "ERROR 440: an unspecified error has occurred"
typedef struct SMOutputAPI SMOutputAPI; // opaque pointer
typedef enum {
	invert_depth,          	// (ft or m),
	hydraulic_head,        	// (ft or m),
	stored_ponded_volume,  	// (ft3 or m3),
	lateral_inflow,        	// (flow units),
	total_inflow,          	// lateral + upstream (flow units),
	flooding_losses,       	// (flow units),
	pollutant_conc_node     // first pollutant,

} SMO_nodeAttribute;
typedef enum {
	flow_rate_link,      	// (flow units),
	flow_depth,     		// (ft or m),
	flow_velocity,  		// (ft/s or m/s),
	flow_volume,			// (ft3 or m3),
	capacity,       		// (fraction of conduit filled),
	pollutant_conc_link  	// first pollutant,

} SMO_linkAttribute;
typedef enum {
	air_temp,              	// (deg. F or deg. C),
	rainfall_system,        // (in/hr or mm/hr),
	snow_depth_system,      // (in or mm),
	evap_infil_loss,	  	// (in/hr or mm/hr),
	runoff_flow,           	// (flow units),
	dry_weather_inflow,    	// (flow units),
	groundwater_inflow,    	// (flow units),
	RDII_inflow,           	// (flow units),
	direct_inflow,         	// user defined (flow units),
	total_lateral_inflow,  	// (sum of variables 4 to 8) //(flow units),
	flood_losses,       	// (flow units),
	outfall_flows,         	// (flow units),
	volume_stored,         	// (ft3 or m3),
	evap_rate             	// (in/day or mm/day),
	//p_evap_rate		    // (in/day or mm/day)
} SMO_systemAttribute;
SMOutputAPI* DLLEXPORT SMO_init(void);
int DLLEXPORT SMO_open(SMOutputAPI* smoapi, const char* path);
int DLLEXPORT SMO_getNodeAttribute(SMOutputAPI* smoapi, long timeIndex,
	SMO_nodeAttribute attr, float* outValueArray);
int DLLEXPORT SMO_getLinkAttribute(SMOutputAPI* smoapi, long timeIndex,
	SMO_linkAttribute attr, float* outValueArray);
int DLLEXPORT SMO_getSystemAttribute(SMOutputAPI* smoapi, long timeIndex,
	SMO_systemAttribute attr, float* outValueArray);
int DLLEXPORT SMO_getSubcatchResult(SMOutputAPI* smoapi, long timeIndex,
	int subcatchIndex, float* outValueArray, int* arrayLength);
int DLLEXPORT SMO_getNodeResult(SMOutputAPI* smoapi, long timeIndex,
	int nodeIndex, float* outValueArray, int* arrayLength);
int DLLEXPORT SMO_getLinkResult(SMOutputAPI* smoapi, long timeIndex,
	int linkIndex, float* outValueArray, int* arrayLength);
int DLLEXPORT SMO_getSystemResult(SMOutputAPI* smoapi, long timeIndex,
	int dummyIndex, float* outValueArray, int* arrayLength);
void DLLEXPORT SMO_free(float *array);
int DLLEXPORT SMO_close(SMOutputAPI* smoapi);
void DLLEXPORT SMO_errMessage(int errcode, char* errmsg, int n);