tools/swmm-reader/swmm_reader/outputapi.py


# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 166
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'SMO_getNodeAttribute'):
        continue
    SMO_getNodeAttribute = _lib.SMO_getNodeAttribute
    SMO_getNodeAttribute.argtypes = [POINTER(SMOutputAPI), c_long, SMO_nodeAttribute, POINTER(c_float)]
    SMO_getNodeAttribute.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 168
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'SMO_getLinkAttribute'):
        continue
    SMO_getLinkAttribute = _lib.SMO_getLinkAttribute
    SMO_getLinkAttribute.argtypes = [POINTER(SMOutputAPI), c_long, SMO_linkAttribute, POINTER(c_float)]
    SMO_getLinkAttribute.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 170
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'SMO_getSystemAttribute'):
        continue
    SMO_getSystemAttribute = _lib.SMO_getSystemAttribute
    SMO_getSystemAttribute.argtypes = [POINTER(SMOutputAPI), c_long, SMO_systemAttribute, POINTER(c_float)]
    SMO_getSystemAttribute.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 173
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'SMO_getSubcatchResult'):
        continue
    SMO_getSubcatchResult = _lib.SMO_getSubcatchResult
    SMO_getSubcatchResult.argtypes = [POINTER(SMOutputAPI), c_long, c_int, POINTER(c_float), POINTER(c_int)]
    SMO_getSubcatchResult.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 175
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'SMO_getNodeResult'):
        continue
    SMO_getNodeResult = _lib.SMO_getNodeResult
    SMO_getNodeResult.argtypes = [POINTER(SMOutputAPI), c_long, c_int, POINTER(c_float), POINTER(c_int)]
    SMO_getNodeResult.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 177
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'SMO_getLinkResult'):
        continue
    SMO_getLinkResult = _lib.SMO_getLinkResult
    SMO_getLinkResult.argtypes = [POINTER(SMOutputAPI), c_long, c_int, POINTER(c_float), POINTER(c_int)]
    SMO_getLinkResult.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 179
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'SMO_getSystemResult'):
        continue
    SMO_getSystemResult = _lib.SMO_getSystemResult
    SMO_getSystemResult.argtypes = [POINTER(SMOutputAPI), c_long, c_int, POINTER(c_float), POINTER(c_int)]
    SMO_getSystemResult.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 182
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'SMO_free'):
        continue
    SMO_free = _lib.SMO_free
    SMO_free.argtypes = [POINTER(c_float)]
    SMO_free.restype = None
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 184
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'SMO_close'):
        continue
    SMO_close = _lib.SMO_close
    SMO_close.argtypes = [POINTER(SMOutputAPI)]
    SMO_close.restype = c_int
    break

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 185
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'SMO_errMessage'):
        continue
    SMO_errMessage = _lib.SMO_errMessage
    SMO_errMessage.argtypes = [c_int, String, c_int]
    SMO_errMessage.restype = None
    break

__const = c_int # <command-line>: 5

# <command-line>: 8
try:
    CTYPESGEN = 1
except:
    pass

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 13
try:
    MAXFILENAME = 259
except:
    pass

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 14
try:
    MAXELENAME = 31
except:
    pass

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 17
try:
    ERR410 = 'Error 410: SMO_init() has not been called'
except:
    pass

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 18
try:
    ERR411 = 'Error 411: SMO_open() has not been called'
except:
    pass

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 19
try:
    ERR414 = 'Error 414: memory allocation failure'
except:
    pass

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 21
try:
    ERR421 = 'Input Error 421: invalid parameter code'
except:
    pass

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 22
try:
    ERR422 = 'Input Error 422: reporting period index out of range'
except:
    pass

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 23
try:
    ERR423 = 'Input Error 423: element index out of range'
except:
    pass

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 24
try:
    ERR424 = 'Input Error 424: no memory allocated for results'
except:
    pass

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 26
try:
    ERR434 = 'File Error 434: unable to open binary output file'
except:
    pass

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 27
try:
    ERR435 = 'File Error 435: invalid file - not created by SWMM'
except:
    pass

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 28
try:
    ERR436 = 'File Error 436: invalid file - contains no results'
except:
    pass

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 29
try:
    ERR437 = 'File Error 437: invalid file - model run issued warnings'
except:
    pass

# C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 31
try:
    ERR440 = 'ERROR 440: an unspecified error has occurred'
except:
    pass

SMOutputAPI = struct_SMOutputAPI # C:\\Users\\mtryby\\Workspace\\GitRepo\\Local\\swmm-output\\src\\outputapi.h: 33

# No inserted files

